Rename SortBy to be less generic
