# LeaderboardBackend/Controllers/LeaderboardsController.cs
@@ -1,4 +1,3 @@
-using System.Net;
 using LeaderboardBackend.Authorization;
 using LeaderboardBackend.Filters;
 using LeaderboardBackend.Models.Entities;
@@ -60,7 +59,7 @@ public class LeaderboardsController(
     public async Task<ActionResult<ListView<LeaderboardViewModel>>> GetLeaderboards(
         [FromQuery] Page page,
         [FromQuery] StatusFilter status = StatusFilter.Published,
-        [FromQuery, SwaggerParameter("Sorts results by a leaderboard's field, tie-breaking with IDs if needed.")] SortBy sortBy = SortBy.Name_Asc
+        [FromQuery, SwaggerParameter("Sorts results by a leaderboard's field, tie-breaking with IDs if needed.")] SortLeaderboardsBy sortBy = SortLeaderboardsBy.Name_Asc
     )
     {
         ListResult<Leaderboard> result = await leaderboardService.ListLeaderboards(status, page, sortBy);
